<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/material_dynamic_neutral_variant90"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTop"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/md_theme_surfaceContainerLow">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/icon_back"
                android:background="@null"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/text_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/green"
                android:textColor="@color/md_theme_outlineVariant"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/text_way"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/way"
                android:textColor="@color/md_theme_primary"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appBarLayoutTop"
        />
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_main"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:defaultNavHost="true"
        app:navGraph="@navigation/main_nav_graph">


    </androidx.fragment.app.FragmentContainerView>



        <!-- Contenuto AppBarLayout inferiore -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surfaceContainerLow"
        app:itemIconSize="25dp"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
